# HW13_mois_2

./: authors.json  manage.py  pyproject.toml  quotes.json  read.me
quotes/: forms.py  models.py  urls.py  views.py
quotes/management/commands/: authors.json  load_authors.py  load_quotes.py
quotes/migrations/: 0001_initial.py
quotes/static/quotes/css/: styles.css
quotes/templates/: home.html
quotes/templates/quotes/: author_detail.html  tag_quotes.html
quotes_project/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: base.html
users/templates/users/: login.html  logout.html  password_reset_complete.html  password_reset_email.html  profile.html  register.html
